FIX: Adjustment to browse bar spacing required for r12666 [q10382]
git-svn-id: http://svn.resourcespace.com/svn/rs/trunk@12674 c08608d7-6e46-0410-86ca-f2a6f1370df5

--- a/css/global.css
+++ b/css/global.css
@@ -1629,8 +1629,8 @@ select.MultiSelect:before {
     padding-left: 10px;
 }
 
-.BrowseBarExpand + .BrowseTypeNode, .BrowseBarExpand + .BrowseTypeRestype, .BrowseBarExpand + .BrowseTypeField, .BrowseBarExpand + .BrowseTypeFeatured{
-    padding-left: 4px;
+.BrowseBarExpand + .BrowseTypeNode, .BrowseBarExpand + a .BrowseTypeRestype, .BrowseBarExpand + .BrowseTypeField, .BrowseBarExpand + a .BrowseTypeFeatured{
+    padding-left: 5px;
 }
 
 .BrowseLine + .BrowseTypeNode, .BrowseLine + .BrowseT
@@ -1643,7 +1643,7 @@ ypeRestype, .BrowseLine + .BrowseTypeField, .BrowseLine + .BrowseTypeNew{
     display: table-cell;
     vertical-align: top;
     white-space: normal;
-    padding-left: 5px;
+    padding-left: 4px;
 }
 
 #BrowseBar .BrowseLine {
